c/examples/writing-a-c-compiler-tests/tests/chapter_8/valid/extra_credit/switch_nested_not_taken.c
// a switch statement cannot jump to cases in a nested switch statement
int main(void) {
    int a = 0;
    // outer switch will execute default, not nested 'case 0'
    switch(a) {
        case 1:
            switch(a) {
                case 0: return 0;
                default: return 0;
            }
        default: a = 2;
    }
    return a;
}